# comicinfoxml

./: .gitignore  .pre-commit-config.yaml  README.md  comicinfoxml.py  pyproject.toml
.github/workflows/: build.yaml  release.yaml
